--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "dependencies": {
     "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-scripts": "^5.0.0"
+    "react-dom": "^18.0.0"
   },
   "main": "/index.js",
   "devDependencies": {
+    "@babel/cli": "^7.21.5",
+    "@babel/core": "^7.22.1",
+    "@babel/preset-env": "^7.22.2",
     "gh-pages": "^5.0.0",
-    "react-scripts": "1.0.0"
+    "react-scripts": "^1.1.5"
   },
   "keywords": [],
   "name": "react-tutorial-tic-tac-toe-forked",
