--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "@babel/cli": "^7.21.5",
     "@babel/core": "^7.22.1",
+    "@babel/plugin-transform-arrow-functions": "^7.21.5",
     "@babel/preset-env": "^7.22.2",
     "gh-pages": "^5.0.0",
     "react-scripts": "^1.1.5"
